use java 17 w/o preview features