@@ -17,8 +17,7 @@
 		<uhoefel.git.root>scm:git:ssh://git@github.com/uhoefel/</uhoefel.git.root>
 		<junit.jupiter.version>5.7.1</junit.jupiter.version>
 		<junit.platform.version>1.7.1</junit.platform.version>
-		<jdk.version>16</jdk.version>
-		<jvm.extraArgs>--enable-preview</jvm.extraArgs>
+		<jdk.version>17</jdk.version>
 	</properties>
 
 	<url>${uhoefel.git.url}${project.name}</url>
